;
; Convert ATD -> Python
;
(rule
  (targets
    allcaps.py
    everything.py
  )
  (deps
    ../atd-input/ALLCAPS.atd
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdd} %{deps})))

;
; Typecheck and run the tests on the generated Python code.
;
(rule
 (alias runtest)
 (package atdd)
 (deps
  everything.py
  (glob_files *.py))
 (action
  (progn
   (run python3 -m flake8 .)
   (run python3 -m mypy --strict .)
   (run python3 -m pytest .))))
